<resources>
    <string name="app_name">Easyway Mobile</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">Easyway 1.1.0</string>
    <string name="defaultURL">http://197.232.43.131:8090/EasywayOnline/WebService.svc/EasyweighService</string>
    <string name="defaultKey">E457UGH0X9</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_import">Import Master</string>
    <string name="nav_item_import_user">Import Users</string>
    <string name="nav_item_farmers">Farmers Reciepts</string>
    <string name="nav_item_batches">Batch List</string>
    <string name="nav_item_search">Search Farmer</string>
    <string name="nav_item_paired">Pair Devices</string>
    <string name="nav_item_settings">General Settings</string>
    <string name="nav_sub_menu">More</string>
    <string name="nav_sub_menu_item01">Reset Base Date</string>
    <string name="nav_sub_menu_item02">Sub Menu Item 2</string>
    <string name="nav_sub_menu_changepass">Change Password</string>
    <string name="drawer_header_text">Username</string>
    <string name="search_hint">Search</string>
    <string name="open_batch">Open Batch</string>
    <string name="close_batch">Close Batch</string>
    <string name="batch_on">Running Batch</string>
    <string name="opened_on">Date</string>
    <string name="BuyProd"><u>Sourcing From Agent</u></string>
    <string name="BuyProdF"><u>Sourcing From Outgrower</u></string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Email">E-mail</string>
    <string name="ConfirmPassword">Re-type Password</string>
    <string name="Fullname">Full Name</string>
    <string name="title_sign_in">Sign In</string>
    <string name="title_sign_out">Sign Out</string>
    <string name="username_is_short">Username is short</string>
    <string name="invalid_email">E-mail Invalid</string>
    <string name="password_is_short">Password is short</string>
    <string name="Passwords_does_not_much">Passwords does not much</string>
    <string name="ServerError">Oops!! Didn\'t receive any data from server!</string>
    <string name="LoginError">Please type correct username/password</string>
    <string name="add_farmer">Add Farmer</string>
    <string name="add_user">Add User</string>
    <string name="btn_next">Next</string>
    <string name="btn_print">Print</string>
    <string name="tab0">Weighs</string>
    <string name="tab1">Purchases</string>
    <string name="tab2">Batches</string>
    <string name="please_wait">Please Wait ...</string>
    <string name="logging_out">Logging Out ...</string>
    <string name="going_manual">Going Manual ...</string>
    <string name="spinner_prompt_zone">Select Zone</string>
    <string name="spinner_prompt_factory">Select Factory</string>
    <string name="spinner_prompt_session">Select Session</string>
    <string name="spinner_prompt_route">Select Route</string>
    <string name="spinner_prompt_shed">Select Shed</string>
    <string name="spinner_prompt_agent">Select Agent</string>
    <string name="spinner_prompt_produce">Select Produce</string>
    <string name="spinner_prompt_grade">Select Grade</string>
    <string name="spinner_prompt_variety">Select Variety</string>
    <string name="spinner_prompt_warehouse">Select Warehouse</string>
    <string name="spinner_prompt_transporter">Select Transporter</string>
    <string name="spinner_prompt_managed">Select</string>
    <string name="ScaleError">Please select Scale Model to Weigh</string>
    <string name="btnSave">Save</string>
    <string name="btnUpdate">Update</string>
    <string name="btnDel">Delete</string>
    <string name="title_users">Users</string>
    <string name="title_agent">Agents</string>
    <string name="title_company">Company Setup</string>
    <string name="title_factory">Factories</string>
    <string name="title_zone">Zones</string>
    <string name="title_shed">Sheds</string>
    <string name="title_route">Routes</string>
    <string name="title_farmer">Farmers</string>
    <string name="title_farmerW">Farmers Weighment</string>
    <string name="title_produce">Produce</string>
    <string name="title_grade">Grades</string>
    <string name="title_variety">Varieties</string>
    <string name="title_tpt">Transporters</string>
    <string name="title_trs">Route - Shed</string>
    <string name="title_upload">Upload</string>
    <string name="title_activity_serial">Transcell (VSP)</string>
    <string name="title_activity_fpreader">Fingerprint Reader</string>
    <string name="company_details">Company Details</string>
    <string name="company_prefix">Prefix</string>
    <string name="company_name">Name</string>
    <string name="company_letterbox">LetterBox</string>
    <string name="company_postalcode">Postal Code</string>
    <string name="company_postalname">Post Name</string>
    <string name="company_postregion">Region</string>
    <string name="company_posttel">Telephone</string>
    <string name="receiptSettings">Receipt Settings</string>
     <string name="Language">Receipt Language</string>
    <string name="LanguageSummary">Choose Preferred Language</string>
    <string name="Template">Receipt Template</string>
    <string name="TemplateSummary">Choose Preferred Template</string>
    <string name="ad_unit_id">pub-6485677546432107/1100661008</string>
    <string-array name="usertype">
        <item>Manager</item>
        <item>Clerk</item>
    </string-array>
    <string-array name="managedfarm">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="batchsession">
        <item>Select ...</item>
        <item>Morning</item>
        <item>Mid-Morning</item>
        <item>Afternoon</item>
        <item>Evening</item>
    </string-array>
    <string name="text_bluetooth_off">Bluetooth is Off</string>
    <string name="text_bluetooth_on">Bluetooth is On</string>
    <string name="text_connect">Connect</string>
    <string name="text_disconnect">Disconnect</string>
    <string name="text_enable_bluetooth">Enable Bluetooth</string>
    <string name="text_disable_bluetooth">Disable Bluetooth</string>
    <string name="text_scan_devices">Scan Devices</string>
    <string name="text_stop_scan">Scan Devices</string>
    <string name="text_list_paired_devices">Paired Devices</string>
    <string name="text_list_devices">List of Devices</string>
    <string name="text_pair">Pair</string>
    <string name="text_print_demo">Print Demo</string>
    <string name="text_print_barcode">Print Barcode</string>
    <string name="text_print_image">Print Image</string>
    <string name="text_print_receipt">Print Receipt</string>
    <string name="text_print_text">Print Text</string>
    <string name="General_settings">General</string>
    <string name="avatar">Avatar</string>
    <string name="avatar_is_not_visible">Invisible</string>
    <string name="Settings">Settings</string>
    <string name="fab_button_animation">Floating Button Animation</string>
    <string name="header_Ads">Ads Visibility</string>
    <string name="ads_is_not_visible">Invisible</string>
    <string name="ads_is_visible">Visible</string>
    <string name="pref_text_color_message_dialog">Text Color </string>
    <string name="pref_text_color_name_dialog">Text Color Name</string>
    <string name="pref_body">Body And Date</string>
    <string name="pref_name">Name</string>
    <string name="pref_text_size_conversation_dialog"> Text  Size </string>
    <string name="summary_color_body_date">Customize the text color of body and date</string>
    <string name="tvProduceCode">Produce Code:</string>
    <string name="tvProduceTitle">Produce Title:</string>
    <string name="tareWeight">Tare Weight</string>
    <string name="terminalID">Terminal ID</string>
    <string name="defaultValue">0</string>
    <string name="enablePrinting">Enable Printing</string>
    <string name="enableQuality">Enable Quality</string>
    <string name="enableNFC">Use NFC</string>
    <string name="enableAutomaticDel">Auto generate Delivery No</string>
    <string name="enableAutomaticTicket">Auto generate Ticket No</string>
    <string name="enableSMS">Enable SMS</string>
    <string name="enableSMSSummary">This will enable sending of SMS</string>
    <string name="enableAlphaNumeric">"Enable Alphanumeric Characters"</string>
    <string name="enableShifts">Enable or Disable Shifts</string>
    <string name="prefCategory">General Settings</string>
    <string name="prefCategoryWeighing">Weighing Settings</string>
    <string name="cloudSettings">Cloud Settings</string>
    <string name="prefAutomaticDel">"This will enable an auto generated Delivery Number."</string>
    <string name="prefAutomaticTicket">"This will enable an auto generated Ticket Number."</string>
    <string name="prefTerminalSummary">"Enter a unique terminal id here.(Only 4 Characters Allowed)"</string>
    <string name="prefTareSummary">"Enter tare weight here. It has to be greater than 0 and less than 9.9"</string>
    <string name="prefPrintingSummary">"This will enable printing.Make sure you have the printer set."</string>
    <string name="prefQualitySummary">"This will enable quality. Make sure you have the quality set."</string>
     <string name="prefNFC">"This will enable the use of NFC to search farmers."</string>
    <string name="prefAlphaNumericSummary">This will enable AlphaNumeric Characters.</string>
    <string name="prefShiftsSummary">This will enable or disable use of shifts(AM/PM/PM1).</string>
    <string name="enableCanSerial">Enable Can Serial</string>
    <string name="prefCanSerialSummary">This will enable prompting for container serial number to store produce.</string>
    <string name="stabilityReading">Samples to accept reading</string>
    <string name="stabilitySummary">Number of readings to use to get a stable reading</string>
    <string name="stabilityDefaultValue">2</string>
    <string name="stabilityTime">Milliseconds of reading samples</string>
    <string name="stabilitySummaryT">Number of milliseconds used to get a stable reading</string>
    <string name="stabilityDefaultValueT">100</string>
    <string name="cloudServices">Enable Cloud Services</string>
    <string name="cloudServicesSummary">This will enable access to the Easyway cloud platform</string>
    <string name="licenseKey">License Key</string>
    <string name="licenseKeySummary">Enter your unique license key for use of Easyway cloud platform</string>
    <string name="portalURL">URL Portal</string>
    <string name="portalURLSummary">Enter the URL to access the Easyway cloud services</string>
    <string name="buyingPrice">Enable Buying Price</string>
    <string name="ebuyingPrice">Enter Buying Price</string>
    <string name="buyingPriceSummary">Enable this option to allow input of buying price in purchasing screen</string>
    <string name="ebuyingPriceSummary">Enter the initial buying price</string>
    <string name="easyweighVersionSettings">Easyweigh Version Settings</string>
    <string name="vModes">Verification Modes</string>
    <string name="verificationModesSummary">Select the Verification Mode to be used with this phone</string>
    <string name="scaleModel">Scale Model</string>
    <string name="weighingAlgorithm">Weighing Algorithm</string>
    <string name="scaleVersionSummary">Select the Easyweigh Scale Version to be used with this phone</string>
    <string name="weighingAlgorithmSummary">Select the Weighing Algorithm to be used when recording weight</string>
    <string name="internetAccessModeSummary">Select your preferred mode of data access</string>
    <string name="internetAccessMode">Preferred Data Access Mode</string>
    <string name="next">Next</string>
    <string name="fingerprint_search">FingerPrint Search</string>
    <string name="manual_farmer_search">Manual Farmer Search</string>
    <string name="read_card_search">Read Card Search</string>
</resources>