<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_home"
            android:checked="true"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/navigation_item_search"
            android:icon="@drawable/ic_search_black"
            android:title="@string/nav_item_search" />
        <item
            android:id="@+id/navigation_item_import"
            android:icon="@drawable/ic_import"
            android:title="@string/nav_item_import" />
        <item
            android:id="@+id/navigation_item_import_user"
            android:icon="@drawable/ic_import_users"
            android:title="@string/nav_item_import_user"
            />

        <item
            android:id="@+id/navigation_item_paired"
            android:icon="@drawable/ic_paired"
            android:title="@string/nav_item_paired" />
        <item
            android:id="@+id/navigation_item_farmers"
            android:icon="@drawable/ic_farmers"
            android:title="@string/nav_item_farmers"
            android:visible="false"/>
        <item
            android:id="@+id/navigation_item_settings"
            android:icon="@drawable/ic_settings_grey600_24dp"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/ChangePass"
            android:icon="@drawable/ic_changepass"
            android:title="@string/nav_sub_menu_changepass" />
    </group>

    <item android:title="@string/nav_sub_menu">

        <menu>
            <item
                android:id="@+id/fp_reader"
                android:icon="@drawable/ic_emoticon"
                android:title="@string/title_activity_fpreader"
                android:visible="false"/>
            <item
                android:id="@+id/SerialDev"
                android:icon="@drawable/ic_emoticon"
                android:title="@string/title_activity_serial" />
            <item
                android:id="@+id/SerialDevTest"
                android:icon="@drawable/ic_emoticon"
                android:title="@string/title_activity_serial" />
            <item
                android:id="@+id/nav_basedate"
                android:icon="@drawable/ic_dateset"
                android:title="@string/nav_sub_menu_item01" />
            <item
                android:id="@+id/SignOutItem"
                android:icon="@drawable/ic_sign_out"
                android:title="@string/title_sign_out" />

        </menu>
    </item>

</menu>