<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="5dp"
    android:id="@+id/ParentLayout">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2" >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/whitestom_toast"
            android:paddingBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/BuyProdF"
                android:id="@+id/textView28"
                android:textColor="@color/colorPinkDark"
                android:layout_gravity="center"
                android:textSize="15dp" />

            <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Produce"
            android:id="@+id/textView8"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBlack" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spProduce"
            android:popupBackground="@color/colorWhite"
            android:spinnerMode="dialog"
            android:prompt="@string/spinner_prompt_produce"
            />
    </LinearLayout>
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Variety"
        android:id="@+id/textView9"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBlack" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spVariety"
        android:popupBackground="@color/colorWhite"
        android:spinnerMode="dialog"
        android:prompt="@string/spinner_prompt_variety"/>
  </LinearLayout>

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal" >

    <TextView
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:text="Grade"
        android:textColor="@color/colorBlack" />

    <Spinner
        android:id="@+id/spGrade"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:popupBackground="@color/colorWhite"
        android:spinnerMode="dialog"
        android:prompt="@string/spinner_prompt_grade"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?android:attr/textAppearanceMedium"
          android:text="Buying Price"
          android:id="@+id/textView10"
          android:layout_marginTop="5dp"
          android:textColor="@color/colorBlack" />

      <EditText
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:id="@+id/edtPrice"
          android:inputType="numberDecimal"
          android:layout_margin="5dp" />
  </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btnHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_buttons"
            android:text="@string/nav_item_home"
            android:textColor="@drawable/button_text_color"
            android:textSize="15sp"
            android:visibility="visible" />

        <Button
          android:id="@+id/btn_next"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:background="@drawable/bg_buttons"
          android:text="@string/next"
          android:textColor="@drawable/button_text_color"
          android:textSize="15sp"
          android:visibility="visible" />
    </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>